<resources>
    <string name="app_name">FiveTV</string>
    <string name="service_description">FiveTV is running ...</string>
    <string name="login_with_device_id">Login With Device ID</string>
    <string name="login_with_username">Login With Username</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="All">All</string>
    <string name="All_A_Z">All: A-Z</string>
    <string name="Back_twice_to_exit">Press Back twice quickly to exit!</string>
    <string name="Cancel">Cancel</string>
    <string name="Click_Restricted_Group">Click restricted group to Open/Close</string>
    <string name="ContinueStr">Continue</string>
    <string name="Exit">Exit</string>
    <string name="Fav_channel">Long press channel to favorite it!</string>
    <string name="Favorites">Favorites</string>
    <string name="Favorites_live">Favorites</string>
    <string name="ForceUpdateMsg">This version is no longer available, please upgrade to the latest version</string>
    <string name="NetworkChange">Network connection changed, stopping Channel!</string>
    <string name="No">No</string>
    <string name="Play">Play</string>
    <string name="Playback">Playback</string>
    <string name="Please_Input_Password">Please Input Password</string>
    <string name="Results">Results</string>
    <string name="Retry">Retry</string>
    <string name="Search">Search</string>
    <string name="Seek_to_last_position_notice">Long press LEFT to play from the beginning.</string>
    <string name="Setup">Setup</string>
    <string name="Submit">Submit</string>
    <string name="Subtitle">Subtitle</string>
    <string name="Subtitle_Off">Subtitle Off</string>
    <string name="Yes">Yes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About RedBeanTV</string>
    <string name="about_us_text">所有影视资源均来自第三方网站，该应用并未做任何存储和编辑操作。如您认为该应用里所链接的第三方影视资源侵犯了您的合法权益，请通知我们，我们将在第一时间予以删除，同时向您表示歉意！\nQQ: 3185770797</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_profile_save">Save and Continue</string>
    <string name="add_profile_t1">Add Profile</string>
    <string name="already_latest_version">Already latest version!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_start">Run After Bootup</string>
    <string name="auto_start_off">Off</string>
    <string name="auto_start_on">On</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brightness">Brightness</string>
    <string name="buffer">Buffer</string>
    <string name="cannot_create_profile">Cannot create profile:</string>
    <string name="channel_offline">Channel is offline temporarily</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_update">Check Update</string>
    <string name="child_profile">Child Profile</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_data">Clear History and Cache</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="res_0x7f11004e_google_firebase_crashlytics_mapping_file_id">79c99aac57524b0680424418e588ec8d</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="confirm_quit">Are you sure to quit?</string>
    <string name="confirm_reload">Reload system now?</string>
    <string name="contact_method">Contact</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="current_account_expire">Current account has expired, login to recharge!</string>
    <string name="current_version">Current Version</string>
    <string name="default_web_client_id">895801838264-jufn7b42s96q5681i6flgj081v7nkpq0.apps.googleusercontent.com</string>
    <string name="delete_profile">Delete</string>
    <string name="demo_service">Demo Service</string>
    <string name="disabled_or_expired_err">Disabled or expired account!</string>
    <string name="done">Done!</string>
    <string name="due_date">Due date</string>
    <string name="duplicate_profile_error">Profile name exists</string>
    <string name="duration_hr_min">%1$d h %2$d min</string>
    <string name="duration_min">%d min</string>
    <string name="episode_count_postfix">episódios</string>
    <string name="errorTitle">Error</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_v2">Logout</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_description">Fullscreen mode</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="expire_error">Friendly Reminder</string>
    <string name="expire_error_info">You have been watching this channel %1$d hours, have a rest?</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favorite_added">Added to Favorites!</string>
    <string name="favorite_hint">Long press movie cover to favorite it!</string>
    <string name="favorited">favorited!</string>
    <string name="gcm_defaultSenderId">895801838264</string>
    <string name="google_api_key">AIzaSyBJ4VH6AuCLN_G7CzMv_mB4466IKpPEjSo</string>
    <string name="google_app_id">1:895801838264:android:14275fd56cf92abdaa424d</string>
    <string name="google_crash_reporting_api_key">AIzaSyBJ4VH6AuCLN_G7CzMv_mB4466IKpPEjSo</string>
    <string name="google_storage_bucket">fp3fsp46rif-acou.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ignore">Ignore</string>
    <string name="invalid_pin_number">Invalid PIN Number</string>
    <string name="is_child_prof">Child Profile</string>
    <string name="item_view_role_description">Tab</string>
    <string name="latest_version">Latest Version</string>
    <string name="load_end">No more data</string>
    <string name="load_failed">load more failed</string>
    <string name="loading">Loading…</string>
    <string name="login">Login</string>
    <string name="login_error">login error</string>
    <string name="login_submit">Access</string>
    <string name="logout">Logout</string>
    <string name="match_completed">Complete</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="package_">Package:</string>
    <string name="service_period">Expire:</string>
    <string name="update_info">Update Information</string>
    <string name="update_later">Update Later</string>
    <string name="update_now">Update Now</string>
    <string name="user_string">User:</string>
    <string name="who_is_watching">who is watching?</string>
</resources>