<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_v3"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="25.0dip"
    android:theme="@style/WhiteOpenSans">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30.0dip"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/who_is_watching"
        android:textSize="28.0sp"
        app:layout_constraintBottom_toTopOf="@+id/_ll1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/_ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/create_profile_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile_avatar"
                    android:layout_width="90.0dip"
                    android:layout_height="90.0dip"
                    android:layout_margin="5.0dip"
                    android:contentDescription="profile avatar"
                    android:focusable="false"
                    android:padding="3.0dip"
                    android:src="@drawable/profile_avatar_1" />

                <TextView
                    android:id="@+id/profile_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:fontFamily="@font/open_sans_semibold"
                    android:singleLine="true"
                    android:text="profile_id" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/expired_acc_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.0dip"
        android:background="@drawable/add_profile_button_bg_selector"
        android:focusable="true"
        android:padding="10.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_ll1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/current_account_expire" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="10.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50.0px"
            android:background="@drawable/account_info_bg"
            android:paddingLeft="40.0px"
            android:paddingTop="30.0px"
            android:paddingRight="40.0px"
            android:paddingBottom="30.0px">

            <ImageView
                android:layout_width="40.0px"
                android:layout_height="40.0px"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10.0px"
                android:src="@drawable/account_info_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0px"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/user_string"
                android:textSize="24.0px" />

            <TextView
                android:id="@+id/account_info_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="."
                android:textSize="24.0px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50.0px"
            android:background="@drawable/account_info_bg"
            android:paddingLeft="40.0px"
            android:paddingTop="30.0px"
            android:paddingRight="40.0px"
            android:paddingBottom="30.0px">

            <ImageView
                android:layout_width="40.0px"
                android:layout_height="40.0px"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10.0px"
                android:src="@drawable/account_info_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0px"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/package_"
                android:textSize="24.0px" />

            <TextView
                android:id="@+id/account_info_package"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="."
                android:textSize="24.0px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/account_info_bg"
            android:paddingLeft="40.0px"
            android:paddingTop="30.0px"
            android:paddingRight="40.0px"
            android:paddingBottom="30.0px">

            <ImageView
                android:layout_width="40.0px"
                android:layout_height="40.0px"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10.0px"
                android:src="@drawable/account_info_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0px"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/service_period"
                android:textSize="24.0px" />

            <TextView
                android:id="@+id/account_info_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_regular"
                android:text="."
                android:textSize="24.0px" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>