<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="1000px"
        android:layout_height="840px"
        android:layout_gravity="center"
        android:background="@mipmap/dialog_bg"
        android:orientation="vertical"
        android:scaleX="0.8"
        android:scaleY="0.8">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50px">

            <ImageView
                android:id="@+id/dialog_icon"
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_centerInParent="true"
                android:src="@mipmap/dialog_icon" />

            <com.dinuscxj.progressbar.CircleProgressBar
                android:id="@+id/dialog_progress"
                android:layout_width="180px"
                android:layout_height="180px"
                android:layout_centerHorizontal="true"
                android:max="100"
                android:visibility="gone"
                app:progress_background_color="#717171"
                app:progress_end_color="#991094a9"
                app:progress_start_color="#99515c7a"
                app:progress_stroke_width="6px"
                app:progress_text_color="@color/dialog_title"
                app:progress_text_size="28px"
                app:style="solid_line" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30px"
            android:gravity="center"
            android:text="@string/update_info"
            android:textColor="@color/dialog_title"
            android:textSize="40px"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:layout_marginLeft="84px"
            android:layout_marginTop="45px"
            android:layout_marginRight="84px"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|left"
                android:lineSpacingMultiplier="1.5"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/dialog_message"
                android:textSize="34px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="84px"
            android:layout_marginTop="50px"
            android:layout_marginRight="84px"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="254px"
                android:layout_height="78px"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="90px"
                android:background="@drawable/dialog_btn_bg2"
                android:gravity="center"
                android:text="@string/update_later"
                android:textColor="@color/dialog_button"
                android:textSize="28px" />

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="254px"
                android:layout_height="78px"
                android:layout_gravity="center"
                android:background="@drawable/dialog_btn_bg2"
                android:gravity="center"
                android:text="@string/update_now"
                android:textColor="@color/dialog_button"
                android:textSize="28px" />
        </LinearLayout>
    </LinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
